extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L0/tests/wrongmodulename.out
* _pp.ob
MODULE aname;
END anothername.
* errors
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L0/tests/wrongmodulename.ob:3:5:error: end module name 'anothername' should be 'aname'
END anothername.
    ^
